--- a/droolsPower/pom.xml
+++ b/droolsPower/pom.xml
@@ -23,7 +23,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-    
+    <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
     <!-- drools library -->
     <!-- https://mvnrepository.com/artifact/org.eclipse.jdt.core.compiler/ecj -->
 	<dependency>
@@ -57,5 +61,12 @@
       <artifactId>xstream</artifactId>
       <version>1.2.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14 -->
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-jdk14</artifactId>
+	    <version>1.7.25</version>
+  	</dependency>
+    
   </dependencies>
 </project>
